--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
    <application
         android:label="e1547"
+        android:allowBackup="true"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
