--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
 
   # data
-  dio: ^4.0.0
+  dio: ^4.0.1
   share: ^2.0.1
   mutex: ^3.0.0
   intl: ^0.17.0
@@ -33,6 +33,7 @@ dependencies:
   filesize: ^2.0.1
   wakelock: ^0.5.6
   url_launcher: ^6.0.12
+  package_info_plus: ^1.3.0
   permission_handler: ^8.1.6
   shared_preferences: ^2.0.8
   image_gallery_saver: ^1.7.1
