--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
   like_button: ^2.0.2
   photo_view: ^0.12.0
   video_player: ^2.2.5
-  sliver_tools: ^0.2.5
   sliding_sheet: ^0.5.0
   decorated_icon: ^1.2.0
   pull_to_refresh: ^2.0.0
@@ -21,7 +20,6 @@ dependencies:
   cached_network_image: ^3.0.0
   font_awesome_flutter: ^9.0.0
   flutter_cache_manager: ^3.0.1
-  infinite_scroll_pagination: ^3.1.0
   flutter_staggered_grid_view: ^0.4.1
 
   # data
@@ -37,6 +35,11 @@ dependencies:
   permission_handler: ^8.1.6
   shared_preferences: ^2.0.8
   image_gallery_saver: ^1.7.1
+
+  infinite_scroll_pagination:
+    git:
+      url: git://github.com/EdsonBueno/infinite_scroll_pagination
+      ref: 268945f
 
   username_generator:
     git: git://github.com/clragon/username_generator.git
