--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   like_button: ^2.0.2
   photo_view: ^0.12.0
   video_player: ^2.2.5
+  sliver_tools: ^0.2.5
   sliding_sheet: ^0.5.0
   decorated_icon: ^1.2.0
   pull_to_refresh: ^2.0.0
