--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   flutter_typeahead: ^3.2.4
   cached_network_image: ^3.2.0
   font_awesome_flutter: ^9.0.0
-  flutter_scroll_to_top: ^2.1.1
   flutter_cache_manager: ^3.3.0
   flutter_staggered_grid_view: ^0.4.1
 
@@ -33,8 +32,10 @@ dependencies:
   filesize: ^2.0.1
   wakelock: ^0.5.6
   url_launcher: ^6.0.17
+  dio_http_cache: ^0.3.0
   package_info_plus: ^1.3.0
   permission_handler: ^8.1.6
+  sqflite_common_ffi: ^2.1.0
   shared_preferences: ^2.0.11
   image_gallery_saver: ^1.7.1
 
