--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   like_button: ^2.0.4
   photo_view: ^0.13.0
   grouped_list: ^4.1.0
-  video_player: ^2.2.5
+  video_player: ^2.2.10
   sliver_tools: ^0.2.5
   sliding_sheet: ^0.5.0
   decorated_icon: ^1.2.0
@@ -29,10 +29,12 @@ dependencies:
   share: ^2.0.1
   mutex: ^3.0.0
   intl: ^0.17.0
+  crypto: ^3.0.1
   timeago: ^3.1.0
   filesize: ^2.0.1
   wakelock: ^0.5.6
   url_launcher: ^6.0.17
+  media_scanner: ^2.0.0
   dio_http_cache: ^0.3.0
   package_info_plus: ^1.3.0
   permission_handler: ^8.1.6
