--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,11 @@ dependencies:
   # data
   dio: ^4.0.4
   share: ^2.0.1
-  mutex: ^3.0.0
   intl: ^0.17.0
   crypto: ^3.0.1
   timeago: ^3.1.0
   filesize: ^2.0.1
-  wakelock: ^0.5.6
+  wakelock: ^0.6.1+1
   url_launcher: ^6.0.17
   media_scanner: ^2.0.0
   dio_http_cache: ^0.3.0
@@ -59,7 +58,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^1.1.7
+  flutter_native_splash: ^2.0.2
 
 flutter:
   uses-material-design: true
