--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dio: ^4.0.4
   share: ^2.0.1
   intl: ^0.17.0
+  mutex: ^3.0.0
   crypto: ^3.0.1
   timeago: ^3.1.0
   filesize: ^2.0.1
@@ -36,8 +37,8 @@ dependencies:
   url_launcher: ^6.0.17
   media_scanner: ^2.0.0
   dio_http_cache: ^0.3.0
-  package_info_plus: ^1.3.0
-  permission_handler: ^8.1.6
+  package_info_plus: ^1.4.0
+  permission_handler: ^9.2.0
   sqflite_common_ffi: ^2.1.0
   shared_preferences: ^2.0.11
   image_gallery_saver: ^1.7.1
