--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   url_launcher: ^6.0.17
   media_scanner: ^2.0.0
   dio_http_cache: ^0.3.0
-  package_info_plus: ^1.4.0
+  package_info_plus: 1.3.0 # 1.3.1-1.4.x is broken
   permission_handler: ^9.2.0
   sqflite_common_ffi: ^2.1.0
   shared_preferences: ^2.0.11
