--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   like_button: ^2.0.4
   photo_view: ^0.13.0
   grouped_list: ^4.1.0
-  video_player: ^2.2.10
+  video_player: ^2.3.0
   sliver_tools: ^0.2.5
   overflow_view: ^0.3.1
   sliding_sheet: ^0.5.0
@@ -33,7 +33,8 @@ dependencies:
   crypto: ^3.0.1
   timeago: ^3.1.0
   filesize: ^2.0.1
-  wakelock: ^0.6.1+1
+  wakelock: ^0.6.1+2
+  collection: ^1.15.0
   url_launcher: ^6.0.17
   media_scanner: ^2.0.0
   dio_http_cache: ^0.3.0
@@ -53,7 +54,6 @@ dependencies:
 
   flutter:
     sdk: flutter
-  collection: ^1.15.0-nullsafety.4
 
 dev_dependencies:
   flutter_test:
