--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,89 +1,93 @@
 name: Application Release
 
-
 on:
   release:
-    types: [ published ]
+    types: [published]
 
-    
 jobs:
   ios-build:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v3 
-    
-    - uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable' 
-        
-    - run: flutter build ios --no-codesign
-    
-    - run: |
-        cd build/ios/iphoneos
-        mkdir Payload
-        mv Runner.app Payload/Runner.app
-        zip -9 -r e1547.zip Payload
-        mv e1547.zip ../../../e1547.ipa
-    
-    # Upload generated apk to the artifacts.
-    - uses: actions/upload-artifact@v3
-      with:
-        name: release-ios
-        path: e1547.ipa
-        
-    - name: Upload the release assets — iOS file
-      uses: softprops/action-gh-release@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: e1547.ipa
-        asset_name: e1547.ipa
-        asset_content_type: application/octet-stream
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
+      - name: setup actions
+        uses: actions/checkout@v3
+
+      - name: setup flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+
+      - name: get dependencies
+        run: flutter pub get
+
+      - name: build release
+        run: flutter build ios --no-codesign
+
+      - name: package release
+        run: |
+          cd build/ios/iphoneos
+          mkdir Payload
+          mv Runner.app Payload/Runner.app
+          zip -9 -r e1547.zip Payload
+          mv e1547.zip ../../../e1547.ipa
+
+      - name: upload release to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-ios
+          path: e1547.ipa
+
+      - name: upload release to assets
+        uses: softprops/action-gh-release@v1
+        with:
+          files: e1547.ipa
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   android-build:
-    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
     steps:
-  
-    - uses: actions/checkout@v3
-    
-    - uses: actions/setup-java@v2
-      with:
-        distribution: 'zulu'
-        java-version: '12'
-  
-    - uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable' 
-        
-    # Configure release keys
-    - env:
-        KEYSTORE: ${{ secrets.KEYSTORE }}
-        KEYCONFIG: ${{ secrets.KEYCONFIG }}
-      run: | 
-        mkdir -p android/app/keys
-        echo "$KEYSTORE" | base64 -d > android/app/keys/key.pkcs
-        echo "$KEYCONFIG" | base64 -d > android/app/keys/key.properties
-    
-    # Get flutter dependencies.
-    - run: flutter pub get
-    
-    # Build apk.
-    - run: flutter build apk
-    
-    # Upload generated apk to the artifacts.
-    - uses: actions/upload-artifact@v3
-      with:
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
-      
-    - name: Upload the release assets — Android file
-      uses: softprops/action-gh-release@v1
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: build/app/outputs/apk/release/app-release.apk
-        asset_name: e1547.apk
-        asset_content_type: application/java-archive
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: setup actions
+        uses: actions/checkout@v3
+
+      - name: setup java
+        uses: actions/setup-java@v2
+        with:
+          distribution: "zulu"
+          java-version: "12"
+
+      - name: setup flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+
+      - name: configure release keys
+        env:
+          KEYSTORE: ${{ secrets.KEYSTORE }}
+          KEYCONFIG: ${{ secrets.KEYCONFIG }}
+        run: |
+          mkdir -p android/app/keys
+          echo "$KEYSTORE" | base64 -d > android/app/keys/key.pkcs
+          echo "$KEYCONFIG" | base64 -d > android/app/keys/key.properties
+
+      - name: get dependencies
+        run: flutter pub get
+
+      - name: build release
+        run: flutter build apk
+
+      - name: package release
+        run: |
+          mv build/app/outputs/flutter-apk/app-release.apk e1547.apk
+
+      - name: upload release to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-apk
+          path: e1547.apk
+
+      - name: upload release to assets
+        uses: softprops/action-gh-release@v1
+        with:
+          files: e1547.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
