--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,14 @@
 .idea/
 
 # gradle
-gradle/
 .gradle/
 local.properties
-android/app/keys
+*.pkcs
+**/key.properties
 
-# Flutter/Dart/Pub related
+# Flutter
 **/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
@@ -34,5 +35,13 @@ android/app/keys
 # Web related
 lib/generated_plugin_registrant.dart
 
-# Exceptions to above rules.
-!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
