--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   wakelock: ^0.6.1+2
   collection: ^1.15.0
   url_launcher: ^6.0.17
-  media_scanner: ^2.0.0
   dio_http_cache: ^0.3.0
   package_info_plus: 1.3.0 # 1.3.1-1.4.x is broken
   permission_handler: ^9.2.0
@@ -45,10 +44,9 @@ dependencies:
   image_gallery_saver: ^1.7.1
 
   infinite_scroll_pagination:
-    git:
-      url: git://github.com/EdsonBueno/infinite_scroll_pagination
-      ref: 268945f
-
+    git: git://github.com/clragon/infinite_scroll_pagination.git
+  media_scanner:
+    git: git://github.com/clragon/media_scanner.git
   username_generator:
     git: git://github.com/clragon/username_generator.git
 
