--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,9 @@ dependencies:
   pull_to_refresh: ^2.0.0
   flutter_typeahead: ^3.2.4
   cached_network_image: ^3.2.0
-  font_awesome_flutter: ^9.0.0
+  font_awesome_flutter: ^10.1.0
   flutter_cache_manager: ^3.3.0
-  flutter_staggered_grid_view: ^0.4.1
+  flutter_staggered_grid_view: ^0.4.1 # 5.x.x-6.x.x is breaking
 
   # data
   dio: ^4.0.4
