--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   filesize: ^2.0.1
   wakelock: ^0.6.1+2
   collection: ^1.15.0
+  store_checker: ^1.0.0
   url_launcher: ^6.0.17
   dio_http_cache: ^0.3.0
   package_info_plus: 1.3.0 # 1.3.1-1.4.x is broken
