--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   decorated_icon: ^1.2.0
   pull_to_refresh: ^2.0.0
   flutter_typeahead: ^3.2.4
+  flutter_custom_tabs: ^1.0.4
   cached_network_image: ^3.2.0
   font_awesome_flutter: ^10.1.0
   flutter_cache_manager: ^3.3.0
@@ -34,10 +35,11 @@ dependencies:
   crypto: ^3.0.1
   timeago: ^3.1.0
   filesize: ^2.0.1
+  app_links: ^3.0.2
   wakelock: ^0.6.1+2
   collection: ^1.15.0
+  url_launcher: ^6.1.0
   store_checker: ^1.0.0
-  url_launcher: ^6.0.17
   dio_http_cache: ^0.3.0
   package_info_plus: 1.3.0 # 1.3.1-1.4.x is broken
   permission_handler: ^9.2.0
