--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,9 @@ dependencies:
   sliding_sheet: ^0.5.0
   decorated_icon: ^1.2.0
   pull_to_refresh: ^2.0.0
-  flutter_typeahead: ^3.2.4
+  flutter_typeahead: ^4.0.0
   flutter_custom_tabs: ^1.0.4
-  cached_network_image: ^3.2.0
+  cached_network_image: ^3.2.1
   font_awesome_flutter: ^10.1.0
   flutter_cache_manager: ^3.3.0
   flutter_staggered_grid_view: ^0.4.1 # 5.x.x-6.x.x is breaking
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.1.0
   store_checker: ^1.0.0
   dio_http_cache: ^0.3.0
+  path_to_regexp: ^0.4.0
   package_info_plus: ^1.4.2
   permission_handler: ^9.2.0
   sqflite_common_ffi: ^2.1.0
@@ -61,7 +62,7 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^2.0.2
+  flutter_native_splash: ^2.2.0+1
 
 flutter:
   uses-material-design: true
