--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   expandable: ^5.0.1
   like_button: ^2.0.4
   photo_view: ^0.13.0
-  grouped_list: ^4.1.0
+  grouped_list: ^5.0.1
   video_player: ^2.3.0
   sliver_tools: ^0.2.5
   overflow_view: ^0.3.1
@@ -37,6 +37,7 @@ dependencies:
   crypto: ^3.0.1
   timeago: ^3.1.0
   filesize: ^2.0.1
+  sqflite: ^2.0.2+1
   app_links: ^3.0.2
   wakelock: ^0.6.1+2
   collection: ^1.15.0
@@ -44,9 +45,11 @@ dependencies:
   store_checker: ^1.0.0
   dio_http_cache: ^0.3.0
   path_to_regexp: ^0.4.0
+  json_annotation: ^4.5.0
   package_info_plus: ^1.4.2
   permission_handler: ^9.2.0
   sqflite_common_ffi: ^2.1.0
+  copy_with_extension: ^4.0.2
   shared_preferences: ^2.0.11
   image_gallery_saver: ^1.7.1
 
@@ -59,12 +62,20 @@ dependencies:
 
   flutter:
     sdk: flutter
-  sqflite: ^2.0.2+1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.9.0
   flutter_native_splash: ^2.2.0+1
+
+  # dart run build_runner build
+  build_runner: ^2.1.11
+  json_serializable: ^6.2.0
+  copy_with_extension_gen: ^4.0.2
+
+dependency_overrides:
+  json_serializable: ^6.2.0
+  json_annotation: ^4.5.0
 
 flutter:
   uses-material-design: true
