--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,3 +9,8 @@ linter:
     avoid_redundant_argument_values: true
     avoid_function_literals_in_foreach_calls: false
     use_super_parameters: true
+    directives_ordering: true
+
+analyzer:
+  errors:
+    invalid_annotation_target: ignore
