--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,10 @@ dependencies:
   store_checker: ^1.0.0
   dio_http_cache: ^0.3.0
   path_to_regexp: ^0.4.0
-  json_annotation: ^4.5.0
   package_info_plus: ^1.4.2
+  freezed_annotation: ^2.0.3
   permission_handler: ^9.2.0
   sqflite_common_ffi: ^2.1.0
-  copy_with_extension: ^4.0.2
   shared_preferences: ^2.0.11
   image_gallery_saver: ^1.7.1
 
@@ -70,8 +69,7 @@ dev_dependencies:
 
   # dart run build_runner build
   build_runner: ^2.1.11
-  json_serializable: ^6.2.0
-  copy_with_extension_gen: ^4.0.2
+  freezed: ^2.0.3+1
 
 dependency_overrides:
   json_serializable: ^6.2.0
