--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   expandable: ^5.0.1
   like_button: ^2.0.4
   photo_view: ^0.14.0
-  grouped_list: ^5.0.1
+  grouped_list: ^5.1.1
   video_player: ^2.3.0
   sliver_tools: ^0.2.5
   overflow_view: ^0.3.1
@@ -64,7 +64,7 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^2.2.0+1
+  flutter_native_splash: ^2.2.2
 
   # dart run build_runner build
   build_runner: ^2.1.11
