--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
 
   # data
   dio: ^4.0.6
+  path: ^1.8.2
   share: ^2.0.1
   async: ^2.9.0
   intl: ^0.17.0
@@ -45,6 +46,7 @@ dependencies:
   url_launcher: ^6.1.3
   media_scanner: ^2.1.0
   store_checker: ^1.0.0
+  path_provider: ^2.0.11
   dio_http_cache: ^0.3.0
   path_to_regexp: ^0.4.0
   package_info_plus: ^1.4.2
