--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   url_launcher: ^6.1.3
   media_scanner: ^2.1.0
   store_checker: ^1.0.0
+  external_path: ^1.0.1
   path_provider: ^2.0.11
   dio_http_cache: ^0.3.0
   path_to_regexp: ^0.4.0
