--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,12 @@ dependencies:
 
   # data
   dio: ^4.0.6
-  path: ^1.8.2
+  path: ^1.8.1
   share: ^2.0.1
   async: ^2.9.0
   intl: ^0.17.0
   mutex: ^3.0.0
   crypto: ^3.0.1
-  timeago: ^3.1.0
   talker: ^1.0.0+1
   filesize: ^2.0.1
   sqflite: ^2.0.2+1
@@ -44,6 +43,7 @@ dependencies:
   wakelock: ^0.6.1+2
   collection: ^1.15.0
   url_launcher: ^6.1.3
+  relative_time: ^1.1.0
   media_scanner: ^2.1.0
   store_checker: ^1.0.0
   external_path: ^1.0.1
@@ -63,6 +63,8 @@ dependencies:
     git: https://github.com/clragon/username_generator.git
 
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
 dev_dependencies:
