--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   grouped_list: ^5.1.2
   video_player: ^2.4.5
   sliver_tools: ^0.2.7
+  async_builder: ^1.3.1
   overflow_view: ^0.3.1
   sliding_sheet: ^0.5.0
   decorated_icon: ^1.2.0
