--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   cached_network_image: ^3.2.1
   font_awesome_flutter: ^10.1.0
   flutter_cache_manager: ^3.3.0
-  flutter_staggered_grid_view: ^0.4.1 # 5.x.x-6.x.x is breaking
+  flutter_staggered_grid_view: ^0.6.2
 
   # data
   dio: ^4.0.6
