--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   dio: ^4.0.6
   path: ^1.8.1
   drift: ^1.7.1
-  share: ^2.0.1
   async: ^2.9.0
   intl: ^0.17.0
   mutex: ^3.0.0
@@ -46,6 +45,7 @@ dependencies:
   pub_semver: ^2.1.1
   wakelock: ^0.6.1+2
   collection: ^1.15.0
+  share_plus: ^4.0.10
   url_launcher: ^6.1.3
   relative_time: ^1.1.0
   media_scanner: ^2.1.0
