--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   talker: ^1.0.0+1
   url_launcher: ^6.1.3
   wakelock: ^0.6.1+2
+  window_manager: ^0.2.5
 
   infinite_scroll_pagination:
     git: https://github.com/clragon/infinite_scroll_pagination.git
