--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   collection: ^1.15.0
   crypto: ^3.0.1
   dio: ^4.0.6
-  dio_http_cache: ^0.3.0
+  dio_cache_interceptor: ^3.3.0
+  dio_cache_interceptor_db_store: ^5.0.0
   drift: ^2.0.2
   external_path: ^1.0.1
   filesize: ^2.0.1
@@ -82,10 +83,6 @@ dev_dependencies:
   build_runner: ^2.1.11
   drift_dev: ^2.0.1
   freezed: ^2.0.3+1
-
-dependency_overrides:
-  json_serializable: ^6.2.0
-  json_annotation: ^4.5.0
 
 flutter:
   uses-material-design: true
