--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   freezed_annotation: ^2.0.3
   image_gallery_saver: ^1.7.1
   intl: ^0.17.0
+  json_annotation: ^4.6.0
   media_scanner: ^2.1.0
   mutex: ^3.0.0
   package_info_plus: ^1.4.2
@@ -83,6 +84,7 @@ dev_dependencies:
   build_runner: ^2.1.11
   drift_dev: ^2.0.1
   freezed: ^2.0.3+1
+  json_serializable: ^6.3.1
 
 flutter:
   uses-material-design: true
