--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_typeahead: ^4.0.0
   font_awesome_flutter: ^10.1.0
   grouped_list: ^5.1.2
+  keyboard_dismisser: ^3.0.0
   like_button: ^2.0.4
   local_auth: ^2.0.2
   overflow_view: ^0.3.1
