--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
 
   # widgets
+  animations: ^2.0.5
   async_builder: ^1.3.1
   cached_network_image: ^3.2.1
   decorated_icon: ^1.2.0
