--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+dependency_overrides:
+  dio_cache_interceptor_db_store:
+    git:
+      url: https://github.com/clragon/dio_cache_interceptor.git
+      path: dio_cache_interceptor_db_store
+
 dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_launcher_icons: ^0.10.0
