--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   sliding_sheet: ^0.5.0
   sliver_tools: ^0.2.8
-  video_player: ^2.4.5
+  cached_video_player: ^2.0.3
 
   # data
   app_links: ^3.0.2
