--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_typeahead: ^4.0.0
   font_awesome_flutter: ^10.1.0
   grouped_list: ^5.1.2
+  infinite_scroll_pagination: ^4.0.0-dev.1
   keyboard_dismisser: ^3.0.0
   like_button: ^2.0.4
   local_auth: ^2.0.2
@@ -66,8 +67,6 @@ dependencies:
   wakelock: ^0.6.1+2
   window_manager: ^0.2.5
 
-  infinite_scroll_pagination:
-    git: https://github.com/clragon/infinite_scroll_pagination.git
   username_generator:
     git: https://github.com/clragon/username_generator.git
 
@@ -77,10 +76,15 @@ dependencies:
     sdk: flutter
 
 dependency_overrides:
+  infinite_scroll_pagination:
+    git:
+      url: https://github.com/clragon/infinite_scroll_pagination.git
+      ref: 44f3eb
   dio_cache_interceptor_db_store:
     git:
       url: https://github.com/clragon/dio_cache_interceptor.git
       path: dio_cache_interceptor_db_store
+      ref: df6eca
 
 dev_dependencies:
   flutter_lints: ^2.0.1
