--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
 
   # widgets
-  animations: ^2.0.5
+  animations: ^2.0.7
   async_builder: ^1.3.1
   cached_network_image: ^3.2.1
   expandable: ^5.0.1
@@ -26,16 +26,16 @@ dependencies:
   local_auth: ^2.0.2
   overflow_view: ^0.3.1
   photo_view: ^0.14.0
-  provider: ^6.0.3
+  provider: ^6.0.4
   pull_to_refresh: ^2.0.0
   sliding_sheet: ^0.5.0
   sliver_tools: ^0.2.8
   cached_video_player: ^2.0.3
 
   # data
-  app_links: ^3.0.2
+  app_links: ^3.3.0
   async: ^2.9.0
-  collection: ^1.15.0
+  collection: ^1.16.0
   crypto: ^3.0.1
   dio: ^4.0.6
   dio_cache_interceptor: ^3.3.1
@@ -54,16 +54,16 @@ dependencies:
   path_provider: ^2.0.11
   path_to_regexp: ^0.4.0
   permission_handler: ^10.0.0
-  pub_semver: ^2.1.1
-  relative_time: ^2.0.1
-  share_plus: ^4.0.10
+  pub_semver: ^2.1.2
+  relative_time: ^2.2.1
+  share_plus: ^6.2.0
   shared_preferences: ^2.0.11
-  sqflite: ^2.0.2+1
-  sqflite_common_ffi: ^2.1.0
-  sqlite3_flutter_libs: ^0.5.0
-  store_checker: ^1.0.0
-  talker: ^1.0.0+1
-  url_launcher: ^6.1.3
+  sqflite: ^2.2.0+3
+  sqflite_common_ffi: ^2.2.0+1
+  sqlite3_flutter_libs: ^0.5.10
+  store_checker: ^1.1.0
+  talker: ^2.0.0+1
+  url_launcher: ^6.1.6
   wakelock: ^0.6.1+2
   window_manager: ^0.2.5
 
