--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   image_gallery_saver: ^1.7.1
   intl: ^0.17.0
   json_annotation: ^4.6.0
-  media_scanner: ^2.1.0
+  mime: ^1.0.2
   mutex: ^3.0.0
   package_info_plus: ^1.4.2
   path: ^1.8.1
@@ -56,6 +56,7 @@ dependencies:
   permission_handler: ^10.0.0
   pub_semver: ^2.1.2
   relative_time: ^2.2.1
+  shared_storage: ^0.5.0
   share_plus: ^6.2.0
   shared_preferences: ^2.0.11
   sqflite: ^2.2.0+3
