--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   json_annotation: ^4.6.0
   mime: ^1.0.2
   mutex: ^3.0.0
+  notified_preferences: ^1.0.0
   package_info_plus: ^1.4.2
   path: ^1.8.1
   path_provider: ^2.0.11
@@ -58,7 +59,6 @@ dependencies:
   relative_time: ^2.2.1
   shared_storage: ^0.6.0
   share_plus: ^6.2.0
-  shared_preferences: ^2.0.11
   sqflite: ^2.2.0+3
   sqflite_common_ffi: ^2.2.0+1
   sqlite3_flutter_libs: ^0.5.10
